spacing correction

--- a/src/main/webapp/css/blog.css
+++ b/src/main/webapp/css/blog.css
@@ -60,7 +60,7 @@
 
 .bodywrapper .post-tags {
 	list-style: none;
-	margin: 0 0 0 50px;
+	margin: 0 0 1em 50px;
 	padding: 0;
 }
 .bodywrapper .post-tags li {
@@ -577,8 +577,8 @@ div.addArticle{
 	font-weight:bold;
 	font-size:1.4em;
 	color:#ccc;
-	color: rgba ( 255, 255, 255, 0.7);
-	text-shadow: 0 1px 0px rgba (0 ,0 ,0 ,0.5);
+	color: rgba( 255, 255, 255, 0.7);
+	text-shadow: 0 1px 0px rgba(0 ,0 ,0 ,0.5);
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
@@ -590,7 +590,7 @@ div.addArticle{
 .bodywrapper .addArticle a:hover,
 .bodywrapper .addArticle a:focus{
 	background-color:#333;
-	background: rgba ( 255, 255, 255, 0.15);
+	background: rgba( 255, 255, 255, 0.15);
 	color:#fff;
 	text-decoration:none;
 }
